--- a/Primoris.Ai.Kitt/Primoris.Ai.Kitt.csproj
+++ b/Primoris.Ai.Kitt/Primoris.Ai.Kitt.csproj
@@ -1,11 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersionTask" Version="5.1.4-beta1.16">
+    <PackageReference Include="CNTK.GPU" Version="2.8.0-rc0.dev20200126" />
+    <PackageReference Include="GitVersionTask" Version="5.1.4-beta1.99">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
